--- a/composer.json
+++ b/composer.json
@@ -1,42 +1,61 @@
 {
-    "name": "johnfmorton/brute-force-shield",
-    "description": "Prevents brute force password attacks on the Craft CMS control panel by tracking failed login attempts per IP address and blocking access after a configurable threshold.",
-    "type": "craft-plugin",
-    "version": "1.0.0",
-    "keywords": [
-        "craft",
-        "cms",
-        "craftcms",
-        "craft-plugin",
-        "brute force",
-        "security",
-        "login protection"
-    ],
-    "support": {
-        "docs": "https://github.com/johnfmorton/brute-force-shield",
-        "issues": "https://github.com/johnfmorton/brute-force-shield/issues"
-    },
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "John F Morton",
-            "homepage": "https://supergeekery.com"
-        }
-    ],
-    "require": {
-        "craftcms/cms": "^5.0.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "johnfmorton\\bruteforceshield\\": "src/"
-        }
-    },
-    "extra": {
-        "name": "Brute Force Shield",
-        "handle": "brute-force-shield",
-        "developer": "John F Morton",
-        "developerUrl": "https://supergeekery.com",
-        "documentationUrl": "https://github.com/johnfmorton/brute-force-shield",
-        "class": "johnfmorton\\bruteforceshield\\BruteForceShield"
-    }
+	"name": "johnfmorton/brute-force-shield",
+	"description": "Prevents brute force password attacks on the Craft CMS control panel by tracking failed login attempts per IP address and blocking access after a configurable threshold.",
+	"type": "craft-plugin",
+	"version": "1.0.0",
+	"keywords": [
+		"craft",
+		"cms",
+		"craftcms",
+		"craft-plugin",
+		"brute force",
+		"security",
+		"login protection"
+	],
+	"support": {
+		"docs": "https://github.com/johnfmorton/brute-force-shield",
+		"issues": "https://github.com/johnfmorton/brute-force-shield/issues"
+	},
+	"license": "MIT",
+	"authors": [
+		{
+			"name": "John F Morton",
+			"homepage": "https://supergeekery.com"
+		}
+	],
+	"require": {
+		"php": ">=8.2",
+		"craftcms/cms": "^5.8.0"
+	},
+	"autoload": {
+		"psr-4": {
+			"johnfmorton\\bruteforceshield\\": "src/"
+		}
+	},
+	"extra": {
+		"name": "Brute Force Shield",
+		"handle": "brute-force-shield",
+		"developer": "John F Morton",
+		"developerUrl": "https://supergeekery.com",
+		"documentationUrl": "https://github.com/johnfmorton/brute-force-shield",
+		"class": "johnfmorton\\bruteforceshield\\BruteForceShield"
+	},
+	"scripts": {
+		"check-cs": "ecs check --ansi",
+		"fix-cs": "ecs check --ansi --fix",
+		"phpstan": "phpstan --memory-limit=1G"
+	},
+	"config": {
+		"sort-packages": true,
+		"platform": {
+			"php": "8.2"
+		},
+		"allow-plugins": {
+			"yiisoft/yii2-composer": true,
+			"craftcms/plugin-installer": true
+		}
+	},
+	"require-dev": {
+		"craftcms/phpstan": "dev-main"
+	}
 }
